--- a/blog/2025/tech-misnomer.mdx
+++ b/blog/2025/tech-misnomer.mdx
@@ -27,21 +27,18 @@ I remember that, when I got the first resume, it looked like it was someone with
 
 "Great 😁," I Slacked back, internally screaming. Did that mean we hadn't been asking for portfolios as part of the application?
 
-Unfortunately, yes, that's what it meant. And we hadn't planned to have a writing exercise portion either, which I think is an acceptable replacement (better than nothing, at least). 
+Unfortunately, when he got back to me, I learned that, yes, that's what it meant. And we hadn't planned to have a writing exercise portion either, which I think is an acceptable replacement (better than nothing, at least). This by itself made me ready to give a lot of feedback, but then my manager also added, "It's also been really hard to find someone that's in our industry. Even this candidate hasn't worked in our field before."
 
-## Promising improvements
+Okay, so maybe this needed a longer discussion.
 
-## Happy endings
-
-
-...And it was only resumes. And when I looked at them, there weren't any obvious links to portfolios either. Now, resumes are important, but I think many technical writers would agree that some demonstration of your writing ability in the form of a portfolio is equally important. I personally don't like judging So, I went back to my manager, hoping it was a mistake and he just forgot to give them to me. 
-
-Unfortunately, he didn't forget. Actually, they hadn't been asking for them in the application process. Cue internal screaming. 
+## It's time for The Talk
 
 Once I found that out, I sat down with my manager and really told him my opinion on how they should conduct the interview process&mdash;not necessarily with me directly embedded into it, but at least keep a few things in mind.
 
 * Resumes aren't enough for technical writing applications. We need examples of each person's writing to see if they'll be a good fit. 
 * Good technical writers don't need to be industry experts. Instead, they need to know the right questions to ask. 
+
+## Promising improvements
 
 Thankfully, he took this to heart, and a few days later, he started passing on different portfolios of work from applicants. There was also a distinct difference in how he was observing each applicant and their work. For example, one of the applicants sent a link to a knowledge base they'd put together from scratch. This was impressive, but there was something about the content that, while my manager couldn't put his finger on it, he was unsure about it for some reason. 
 
@@ -50,6 +47,8 @@ After taking a look at it myself, it was clear to me that he was probably notici
 After I explained these reasons to him, I think he really understood what I meant by my earlier points. Just because you're an expert and you happen to write pretty well doesn't mean you're a great technical writer automatically. It was clear, for example, that this candidate was very technical and knew a lot about software development, but there were aspects of his writing that he could've improved by putting the user first. 
 
 After this, he went back to the recruiter and relayed what I told him&mdash;and even better, they looped me into the screening process so they could make sure they were doing it right. But honestly, they probably didn't need me; they took my feedback really well and started picking out some really solid candidates, regardless of their specific expertise in our team's industry. 
+
+## Happy endings
 
 Eventually, we ended up hiring a great second tech writer, and at the end of it, my manager thanked me for voicing my opinion and changing his views. He willingly admitted he didn't know a lot about technical writing, so he said that what I shared was really helpful and something he could keep in mind for the future. So all in all, a positive experience! 
 
