--- a/blog/2025/tech-misnomer.mdx
+++ b/blog/2025/tech-misnomer.mdx
@@ -29,27 +29,33 @@ I remember that, when I got the first resume, it looked like it was someone with
 
 Unfortunately, when he got back to me, I learned that, yes, that's what it meant. And we hadn't planned to have a writing exercise portion either, which I think is an acceptable replacement (better than nothing, at least). This by itself made me ready to give a lot of feedback, but then my manager also added, "It's also been really hard to find someone that's in our industry. Even this candidate hasn't worked in our field before."
 
-Okay, so maybe this needed a longer discussion.
+Okay, so maybe this warranted a longer discussion.
 
 ## It's time for The Talk
 
-Once I found that out, I sat down with my manager and really told him my opinion on how they should conduct the interview process&mdash;not necessarily with me directly embedded into it, but at least keep a few things in mind.
+Once I found out that:
 
-* Resumes aren't enough for technical writing applications. We need examples of each person's writing to see if they'll be a good fit. 
-* Good technical writers don't need to be industry experts. Instead, they need to know the right questions to ask. 
+* We were only looking for writers with expert knowledge in our field already, and
+* We weren't asking for portfolios or writing samples in the application
+
+I knew I had to sit down with my manager and at least tell him my opinion. I wasn't sure if I would be able to change anything directly, but just from finding out those two points, I strongly felt that we were setting ourselves up for failure. We didn't have the right mindset to find a great technical writer candidate, and that would not only affect my personal day-to-day work, but it'd affect the company as a whole. This is because, in addition to keeping up our documentation, I needed a colleague that I could collaborate with to push forward technical writing initiatives like creating a new style guide, optimizing the knowledge base's SEO, and championing docs processes in the product cycle. I felt like I wouldn't be able to do this with someone that didn't have a proven, skilled technical writing background.
+
+So, with these strong feelings, I took some time with my manager to tell him my opinions. I told him I wasn't necessarily asking to be more involved in the process (although I would've like that), but I at least wanted to make sure that he and the recruiter understood where I was coming from and what to look for. Thankfully, he took these to heart.
 
 ## Promising improvements
 
-Thankfully, he took this to heart, and a few days later, he started passing on different portfolios of work from applicants. There was also a distinct difference in how he was observing each applicant and their work. For example, one of the applicants sent a link to a knowledge base they'd put together from scratch. This was impressive, but there was something about the content that, while my manager couldn't put his finger on it, he was unsure about it for some reason. 
+I was lucky that I had a manager that was open-minded and was willing to learn about technical writing. He came away from the conversation with a new perspective and promised he'd change up the hiring process.
 
-After taking a look at it myself, it was clear to me that he was probably noticing that, while the articles were written well and didn't break any English rules, the way they were written were hard to read, even for an expert audience. There was a lot of superfluous information at the beginning of the article, not a lot of obvious goals, and the actual procedures for some articles didn't start until the last third of the page. As a technical writer, I knew that these were things that make it harder for readers to actually get through an article, and my manager as a non-writer also sensed that, even though he couldn't put it into words. 
+A few days later, he made good on his promise. First, he started passing on actual portfolios as well as resumes to me. Second, he was sending me his thoughts on the portfolios, and what he said told me he was trying to think about what makes good documentation, even though he wasn't a documentarian himself. For example, one of the applicants sent a knowledge base they'd put together from scratch. By itself, this is impressive, but when my manager shared this link with me, he said, "I'm curious to hear what you think about this. There's something about it I can't quite put my finger on, and I'm not sure if it's just me."
 
-After I explained these reasons to him, I think he really understood what I meant by my earlier points. Just because you're an expert and you happen to write pretty well doesn't mean you're a great technical writer automatically. It was clear, for example, that this candidate was very technical and knew a lot about software development, but there were aspects of his writing that he could've improved by putting the user first. 
+After taking a look myself, it was clear what was giving him pause. While all the articles didn't break any English rules and were technically correct, they  were hard to read&mdash;and not just because the topics were very technical. Instead, I believe the problem was that a lot of articles were very information-heavy in the beginning and didn't get to the point until late into the article. For example, procedural articles didn't start their steps until the last third of the article, while reference articles didn't clearly tell me the point or "why" until somewhere halfway down the page. These are things that I try to avoid as a tech writer because, as evidenced by my manager, while they might not be easy for readers to describe, having these problems really does make their experience harder. 
 
-After this, he went back to the recruiter and relayed what I told him&mdash;and even better, they looped me into the screening process so they could make sure they were doing it right. But honestly, they probably didn't need me; they took my feedback really well and started picking out some really solid candidates, regardless of their specific expertise in our team's industry. 
+Once I went back to him with this analysis and affirmed his initial hesitance, I think he really understood why I insisted we changed the hiring criteria for the role. While this candidate was clearly technical and likely an expert in their own right, this expertise didn't translate into good documentation. 
+
+After this, my manager looped me into the screening process just so he could doubly make sure we were doing it right&mdash;but honestly, they probably didn't need me. They took my feedback really well and started picking out some really solid candidates, regardless of their specific expertise in our team's industry. I was mostly just there to confirm their choices were on the right track&mdash;and they often were! 
 
 ## Happy endings
 
 Eventually, we ended up hiring a great second tech writer, and at the end of it, my manager thanked me for voicing my opinion and changing his views. He willingly admitted he didn't know a lot about technical writing, so he said that what I shared was really helpful and something he could keep in mind for the future. So all in all, a positive experience! 
 
-So to sum it up: don't let the "technical" part of the Technical Writer title fool you&mdash;some of the best technical writers **aren't** experts in their own right. What makes a tech writer great is not their depth of knowledge in a subject, but their ability to learn and ask enough questions to learn **just enough** to explain it to your users. Don't make this mistake and accidentally turn away great tech writers from your door! 
+To sum it up: don't let the "technical" part of the Technical Writer title fool you&mdash;some of the best technical writers **aren't** experts in their own right. What makes a tech writer great is not their depth of knowledge in a subject, but their ability to learn and ask enough questions to learn **just enough** to explain it to your users. Don't make this mistake and accidentally turn away great tech writers from your door! 
