--- a/blog/2025/tech-misnomer.mdx
+++ b/blog/2025/tech-misnomer.mdx
@@ -1,6 +1,6 @@
 ---
 title: "The 'technical' writer technicality"
-description: 'DATE DATE DATE'
+description: 'April 14, 2025'
 ---
 
 Recently, I got involved with hiring a second technical writer for our product team. Unfortunately, when I jumped in, I found that my company fell prey to something I think is common for non-tech writers: they assumed that a technical writer needs to be an expert in the field they're writing in. Thankfully, I came in and convinced my manager that it didn't have to be that way.
