--- a/changelog.mdx
+++ b/changelog.mdx
@@ -1,3 +1,9 @@
+<Update label="April 14, 2025">
+## New blog post
+
+- Published a new blog post, [The 'technical' writer technicality](/blog/2025/tech-misnomer)
+</Update>
+
 <Update label="March 29, 2025">
 ## New and improved portfolio
 
