--- a/blog/2025/using-ai.mdx
+++ b/blog/2025/using-ai.mdx
@@ -1,9 +1,11 @@
 ---
-title: "Vibe coding my way through MDX"
+title: "Vibe coding is a tech writer's new best friend"
 description: 'April 14, 2025'
 ---
 
-With the rise of accessible AI in the workplace, the tech writing community has been stricken with the idea that our jobs might be taken over by LLMs. And, to be fair, this might be true for organizations that don't value what good technical writers bring to the table. But I think that this fear is overstated, and that AI is just another tool&mdash;and an excellent one at that&mdash;to automate and accelerate tech writing tasks just as much as any other technology out there. However, it's a matter of figuring out how to use it effectively. I've been trying to use it more in my day-to-day just to get used to it in my workflow, and recently, I had a great opportunity to really get AI to do a lot of the hefty work for me. 
+With the rise of accessible AI in the workplace, the tech writing community has been stricken with the idea that our jobs might be taken over by LLMs. And, to be fair, this might be true for organizations that don't value what good technical writers bring to the table beyond "just" writing: the ability to get into the perspective of a user. 
+
+But I think that this fear is overstated, and that AI is just another tool&mdash;and an excellent one at that&mdash;to automate and accelerate tech writing tasks just as much as any other technology out there. However, it's a matter of figuring out how to use it effectively. I've been trying to use it more in my day-to-day just to get used to it in my workflow, and recently, I had a great opportunity to really get AI to do a lot of the hefty work for me. 
 
 ## MDX and a dream
 
